# schedule-bridge

./: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-dev-image.yml
app/: __init__.py  config.py
app/api/v1/: __init__.py
schedule_bridge/: __init__.py  config.py  util.py
schedule_bridge/api/: router.py
schedule_bridge/api/v1/: __init__.py
tests/: conftest.py  test_routes.py  util.py
tests/mocked_data/: gamesheet.json
