[project]
name = "schedule-bridge"
version = "0.1.0"
description = "API to ICS translator for sports scheduling"
authors = [{ name = "Brandon Ewing", email = "brandon.ewing@warningg.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "gunicorn",
    "uvicorn",
    "semver",
    "ics==0.8.0dev",
    "python-dateutil",
    "httpx",
]

[dependency-groups]
test = [
    "respx",
    "pytest",
]
dev = [
    "ruff",
    "pre-commit",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
